<resources>
    <string name="app_name">Catalog App</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_navigation_buttons">NavigationButtonsActivity</string>
    <string name="change_theme">Change theme</string>
    <string name="previous_theme">Previous theme</string>
    <string name="uikit_splash_title">Mobile App</string>
    <string name="color_background">Use Color Background</string>
    <string name="solid">solid</string>
    <string name="gradient">gradient</string>
    <string name="image">Image</string>
    <string name="blue_theme">Blue Theme</string>
    <string name="orange_theme">Orange Theme</string>
    <string name="aqua_theme">Aqua Theme</string>
    <string name="misc_shadow_message">Miscellaneous Buttons with Shadow</string>
    <string name="action_icons">Action Icons</string>
    <string name="enter_text_here">Enter text here</string>
    <string name="FirstName">First Name</string>
    <string name="LastName">Last Name</string>
    <string name="FullName">Full Name</string>
    <string name="EmailAddress">Email Address</string>
    <string name="invalid_email_format">Incorrect email format</string>
    <string name="invalid_pwd_format">Invalid password format</string>
    <string name="sample_button">Sample Button</string>
    <string name="uikit_hamburger">Hamburger</string>
    <string name="share">Share</string>
    <string name="mail">Mail</string>
    <string name="chat">Chat</string>
    <string name="spinneronbuttontext">Philips account</string>
    <string name="finishloading">Finish loading</string>

    <string-array name="hamburger_drawer_items">
        <item>Title Long</item>
        <item>Quisque</item>
        <item>Eget Odio</item>
        <item>Ac Lectus</item>
        <item>Faucibus</item>
        <item>Eget In</item>
        <item>Pellentesque</item>
        <item>Title long</item>
        <item>Vestibulum</item>
        <item>Tortor</item>
    </string-array>

    <array name="hamburger_drawer_icons">
        <item>@drawable/uikit_cart</item>
        <item>@drawable/uikit_cart</item>
        <item>@drawable/uikit_coffee</item>
        <item>@drawable/uikit_stats</item>
        <item>@drawable/uikit_recycle_bin</item>
        <item>@drawable/uikit_radio</item>
        <item>@drawable/uikit_factory</item>
        <item>@drawable/uikit_factory</item>
        <item>@drawable/uikit_apple</item>
        <item>@drawable/uikit_gear</item>
    </array>

    <string-array name="controls_array">
        <item>Option 1</item>
        <item>Option 2</item>
        <item>Option 3</item>
    </string-array>

    <string-array name="controls_array2">
        <item>Option 1</item>
        <item>Option 2</item>
    </string-array>

    <string name="title_activity_social_icons">SocialIconsActivity</string>
    <string name="title_activity_list_view_without_icons">ListViewWithoutIcons</string>
    <string name="title_activity_pop_over_menu">PopOverMenu</string>

    <string name="title_activity_spring_boardsctivity">SpringBoardsctivity</string>
    <string name="title_activity_spring_board_six_grid">SpringBoardSixGridActivity</string>
    <string name="title_activity_cards">CardsActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_cards_spike">CardsSpike</string>
    <string name="title_activity_controls">ControlsActivity</string>

    <array name="control_icons">
        <item>@drawable/uikit_arrow_up</item>
        <item>@drawable/uikit_arrow_down</item>
    </array>
    <string name="title_activity_tab_bar_demo_bottom" translatable="false">TabBarDemoBottom</string>
    <string name="title_activity_tab_bar_demo_top" translatable="false">TabBarDemoTop</string>

    <string name="main_page_list_action_bar_up" translatable="false">Action Bar Up</string>
    <string name="main_page_list_action_buttons" translatable="false">Action Buttons</string>

    <!-- About Screen -->
    <string name="uikit_about_screen_apptitle">Mobile app</string>
    <string name="uikit_about_screen_actionbar_title">About</string>
    <string name="uikit_about_screen_version">Version 1.0.1</string>
    <string name="uikit_about_screen_copyright">Copyright \u00A9 2014 Philips</string>
    <string name="uikit_about_screen_terms">Terms &amp; conditions \u203A</string>
    <string name="uikit_about_screen_privacy">Privacy policy \u203A</string>
    <string name="uikit_about_screen_content">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.\n\nUt enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa.</string>

    <string name="uikit_modal_alert_label">Alert Label</string>
    <string name="uikit_modal_alert_message">Lorem ipsum dolor sit amet, consectetur adipisicing elit dolor sit amet dolor sit amet magnus et domine.</string>
    <string name="uikit_modal_alert_negative_button_text">Just Once</string>
    <string name="uikit_modal_alert_positive_button_text">Always</string>
</resources>
